// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> debe demostrar una lista de categorias 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategoris
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One punch"
      key="One punch"
    />
    <GifGrid
      category="Dragon ball"
      key="Dragon ball"
    />
  </ol>
</div>
`;

exports[`Pruebas en <GifExpertApp /> debe mostrar el componente correctamente  1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategoris
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
